Fixed #1, Added full working user CRUD
