# app/leakbuster/schemas/user.py
@@ -5,11 +5,11 @@ from flask import abort
 class UserSchema(Schema):
     name = fields.String(required=True)
     password = fields.String(required=True)
-    roles = fields.String(required=True)
+    roles = fields.String(required=False)
     phone = fields.String(required=True)
     email = fields.Email(required=True)
     callback = fields.Url(required=True)
-    sites = fields.Url(required=True)
+    site = fields.Url(required=True)
     company = fields.String(required=True)
     cdomain = fields.String(required=True)
 
@@ -20,6 +20,11 @@ class ValidationData:
         try:
             schema = UserSchema()
             schema.load(json_data)
+
+            if json_data['roles'] not in ['admin', 'user']:
+                raise ValidationError('Invalid role provided')
+            return
+        except KeyError:
             return
         except ValidationError as err:
             abort(400, err.messages)
